# fractencode

./: CMakeLists.txt  README.md  compress.pro  main.cpp
encode/: Classifier2.cpp  Classifier2.hpp  CodebookGenerator.hpp  DecodeUtils.hpp  Encoder2.hpp  EncodingEngine.cpp  EncodingEngine.h  EncodingEngine2.cpp  EncodingEngine2.hpp  Quantizer.hpp  TransformEstimator.h  TransformEstimator2.hpp  classifier.h  datatypes.h  edgeclassifier.cpp  edgeclassifier.h  encode_parameters.h  encoder.h  transformmatcher.h
gpu/cuda/: CudaConf.h  CudaEncoderBackend.cu  CudaEncoderBackend.h  CudaEncodingEngine.cpp  CudaEncodingEngine.h  CudaPointer.h
gpu/opencl/: OpenCLBrightnessBlockClassifier.hpp  OpenCLEncodingEngine.cpp  OpenCLEncodingEngine.hpp  OpenCLGridPartition.hpp  OpenCLImagePlane.hpp  common.hpp
image/: Image2.hpp  ImageIO.cpp  ImageIO.hpp  ImageStatistics.cpp  ImageStatistics.hpp  image.h  imageutils.cpp  metrics.h  partition.h  partition2.hpp  sampler.cpp  sampler.h  transform.cpp  transform.h
image/partition/: gridpartition.cpp  gridpartition.h  presampledpartition.h  quadtreepartition.cpp  quadtreepartition.h
process/: abstractprocessor.h  gaussian5x5.cpp  gaussian5x5.h  sobel.cpp  sobel.h
schedule/: scheduler.h  schedulerfactory.hpp  sequentialscheduler.hpp  threadedscheduler.hpp
tests/: ClassifierTest.cpp  CodebookGeneratorTests.cpp  ImageIOTest.cpp  ImageSamplerTest.cpp  ImageStatisticsTest.cpp  OpenCLTest.cpp  PartitionTests.cpp  TransformEstimatorTest.cpp  TransformMatcherTest.cpp  catch.hpp
utils/: Assert.hpp  Config.h  attributes.hpp  buffer.hpp  point2d.hpp  size.hpp  sse_debug.cpp  sse_debug.h  sse_utils.cpp  sse_utils.h  timer.h  utils.cpp
utils/opencl/: opencl_rt.hpp
utils/simd/neon/: simdu16x8_neon.hpp
utils/simd/x86/: simdu16x8_sse.hpp
